--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -57,7 +57,7 @@ solana-epoch-info = { workspace = true }
 solana-epoch-schedule = { workspace = true }
 solana-feature-gate-interface = { workspace = true }
 solana-genesis-config = { workspace = true }
-solana-geyser-plugin-manager = { workspace = true, optional = true }
+# solana-geyser-plugin-manager = { workspace = true, optional = true }  # TEMPORARILY DISABLED - version conflicts with litesvm
 solana-hash = { workspace = true }
 solana-inflation = { workspace = true }
 solana-instruction = { workspace = true }
@@ -111,5 +111,5 @@ default = ["sqlite"]
 sqlite = ["surfpool-db/sqlite"]
 postgres = ["surfpool-db/postgres"]
 ignore_tests_ci = []
-geyser_plugin = ["solana-geyser-plugin-manager"]
+geyser_plugin = []  # TEMPORARILY DISABLED - solana-geyser-plugin-manager has version conflicts with litesvm
 subgraph = ["surfpool-subgraph"]
