feat(core): add Jito sendBundle RPC support
Add non-standard `sendBundle` RPC endpoint for Jito bundles imitation,
allowing clients to submit multiple transactions that are executed
sequentially. This is useful for testing applications that use Jito bundles.

Key features:
- Transactions are processed sequentially in order
- Forces skip_preflight to match Jito Block Engine behavior
- Returns bundle ID as SHA-256 hash of comma-separated signatures
- If any transaction fails, the entire bundle is rejected

Note: This is not a 100% bundles implementation as they are not atomic
all-or-nothing like real Jito bundles.

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -45,6 +45,7 @@ reqwest = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true }                                  # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 serde_yaml = "0.9"
 solana-account = { workspace = true }
 solana-account-decoder = { workspace = true }
