--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,7 @@ tracing = { version = "0.1.41", default-features = false }
 url = { version = "1.7.2", default-features = false }
 uuid = "1.15.1"
 zip = { version = "0.6", features = ["deflate"], default-features = false }
+sha2 = { version = "0.10" }
 
 surfpool-core = { path = "crates/core", default-features = false }
 surfpool-db = { path = "crates/db" }
