--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,8 +83,8 @@ juniper_codegen = { version = "0.16.0", default-features = false }
 juniper_graphql_ws = { version = "0.4.0", default-features = false }
 lazy_static = "1.5.0"
 libloading = "0.7.4"
-litesvm = { version = "0.9.1", features = ["nodejs-internal"] }
-litesvm-token = "0.9.1"
+litesvm = { git = "https://github.com/txtx/litesvm", package = "litesvm", branch = "zk-edge", features = ["nodejs-internal"] }
+litesvm-token = { git = "https://github.com/txtx/litesvm", package = "litesvm-token", branch = "zk-edge" }
 log = "0.4.27"
 mime_guess = { version = "2.0.4", default-features = false }
 mustache = "0.9.0"
