--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -32,6 +32,7 @@ ipc-channel = { workspace = true }
 itertools = { workspace = true }
 json5 = { workspace = true }
 jsonrpc-core = { workspace = true }
+lazy_static = { workspace = true }
 jsonrpc-core-client = { workspace = true, features = ["http"] }
 jsonrpc-derive = { workspace = true }
 jsonrpc-http-server = { workspace = true }
