--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -108,7 +108,7 @@ env_logger = "*"
 tempfile = { workspace = true }
 
 [features]
-default = ["sqlite"]
+default = ["sqlite", "geyser_plugin"]
 sqlite = ["surfpool-db/sqlite"]
 postgres = ["surfpool-db/postgres"]
 ignore_tests_ci = []
