--- a/Cargo.toml
+++ b/Cargo.toml
@@ -130,7 +130,7 @@ solana-program-pack = { version = "3.0", default-features = false }
 solana-pubkey = { version = "3.0", default-features = false }
 solana-rpc-client = { version = "3.1", default-features = false }
 solana-rpc-client-api = { version = "3.1", default-features = false }
-solana-runtime = { version = "3.1", default-features = false }
+solana-runtime = { version = "3.1", default-features = false, features = ["agave-unstable-api"] }
 solana-sdk-ids = { version = "3.1", default-features = false }
 solana-signature = { version = "3.1", default-features = false, features = [
     "rand",
