Allows building surfpool with LiteSVM's register-tracing feature. With such a build surfpool can now collect register tracing from executed VMs. Later the tracing data could be ingested and hence be used for: - code coverage statistics - debugging - CUs analysis - security auditing - etc..

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -77,6 +77,7 @@ sqlite = ["surfpool-gql/sqlite", "surfpool-core/sqlite"]
 postgres = ["surfpool-gql/postgres", "surfpool-core/postgres"]
 version_check = []
 subgraph = ["surfpool-core/subgraph"]
+register-tracing = ["surfpool-core/register-tracing"]
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 fork = "0.2.0"
