--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -48,6 +48,7 @@ solana-epoch-info = { workspace = true }
 solana-keypair = { workspace = true }
 solana-message = { workspace = true }
 solana-pubkey = { workspace = true }
+solana-signature = { workspace = true }
 solana-signer = { workspace = true }
 solana-system-interface = { workspace = true }
 solana-transaction = { workspace = true }
