--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ agave-reserved-account-keys = { version = "3.1", default-features = false }
 anchor-lang-idl = "0.1.2"
 ansi_term = "0.12.1"
 anyhow = { version = "1.0.95", default-features = false }
-atty = "0.2.13"
 base58 = "0.2.0"
 base64 = { version = "0.22.1", default-features = false }
 bincode = "1.3.3"
@@ -103,6 +102,7 @@ serde = { version = "1.0.226", default-features = false }
 serde_derive = { version = "1.0.226", default-features = false } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = { version = "1.0.135", default-features = false }
 serde_with = { version = "3.14.0", default-features = false }
+signal-hook = "0.4.3"
 strum = { version = "0.26", default-features = false, features = ["derive"] }
 solana-account = { version = "3.2", default-features = false }
 solana-account-decoder = { version = "3.1", default-features = false }
