--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -18,7 +18,6 @@ actix-cors = { workspace = true }
 actix-web = { workspace = true }
 ansi_term = { workspace = true }
 anyhow = { workspace = true }
-atty = { workspace = true }
 chrono = { workspace = true }
 clap = { workspace = true, optional = true }
 clap_complete = { workspace = true, optional = true }
@@ -42,6 +41,7 @@ ratatui = { workspace = true }
 rust-embed = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+signal-hook = { workspace = true }
 solana-clock = { workspace = true }
 solana-commitment-config = { workspace = true }
 solana-epoch-info = { workspace = true }
@@ -77,6 +77,9 @@ sqlite = ["surfpool-gql/sqlite", "surfpool-core/sqlite"]
 postgres = ["surfpool-gql/postgres", "surfpool-core/postgres"]
 version_check = []
 subgraph = ["surfpool-core/subgraph"]
+
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 fork = "0.2.0"
