--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -66,7 +66,7 @@ solana-keypair = { workspace = true }
 solana-loader-v3-interface = { workspace = true }
 solana-message = { workspace = true }
 solana-nonce = { workspace = true }
-solana-packet = { workspace = true }
+solana-perf = { workspace = true }
 solana-program-option = { workspace = true }
 solana-program-pack = { workspace = true }
 solana-pubkey = { workspace = true }
